objects/FINS_Staffing__c.object
<CustomObject>
    <description>Staffing</description>
    <fields>
        <fullName>FINS_Actual_Amount_Remaining__c</fullName>
        <label>Actual Amount Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Actual_Hours_Remaining__c</fullName>
        <label>Actual Hours Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Billable_Amount_in_Financials__c</fullName>
        <label>Billable Amount in Financials</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Billable_Hours_in_Financials__c</fullName>
        <label>Billable Hours in Financials</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Effective_Amount_Remaining__c</fullName>
        <label>Effective Amount Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Financial_Deal__c</fullName>
        <label>Financial Deal</label>
        <referenceTo>FinancialDeal</referenceTo>
        <relationshipLabel>Staffings</relationshipLabel>
        <relationshipName>Staffings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FINS_Forecasted_Amount_Remaining__c</fullName>
        <label>Forecasted Amount Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Forecasted_Effective_Amount__c</fullName>
        <label>Forecasted Effective Amount Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Forecasted_Hours_Remaining__c</fullName>
        <label>Forecasted Hours Remaining</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Future_Schedule_Hours_Week_On__c</fullName>
        <label>Future Schedule Hours (Week On)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Future_Scheduled_Value__c</fullName>
        <label>Future Scheduled Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Planned_Hours__c</fullName>
        <label>Planned Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Practice__c</fullName>
        <label>Practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Advisory</fullName>
                </value>
                <value>
                    <fullName>ISI</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Resource_Region__c</fullName>
        <label>Resource Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Senior Associate</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Scheduled_Hours__c</fullName>
        <label>Scheduled Hours</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Skillset_Required__c</fullName>
        <label>Skillsets Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Modeling</fullName>
                </value>
                <value>
                    <fullName>Restructuring</fullName>
                </value>
                <value>
                    <fullName>Strategic Advisory</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Staffing_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staffing Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staffings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staffing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Staffing_Queue</fullName>
        <columns>NAME</columns>
        <columns>FINS_Financial_Deal__c</columns>
        <columns>FINS_Role__c</columns>
        <columns>FINS_Resource_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FINS_Actual_Amount_Remaining__c</field>
            <operation>equals</operation>
        </filters>
        <label>Staffing Queue</label>
    </listViews>
    <nameField>
        <label>Staffing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>